--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1915,3 +1915,32 @@ footer.footer {
         text-align: center;
     }
 }
+
+.stacked-section {
+  height: 100vh;
+  position: relative;
+}
+
+.stacked-container {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  margin: 0 10px;
+}
+
+.stacked-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  opacity: 0;
+  transform: translate(100%, 100%); /* старт з правого-низу */
+  border-radius: 12px;
+  border: 2px solid red;
+}
